--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap");
 
 html,
 body {
   margin: 0;
   border: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .header {
@@ -12,6 +12,7 @@ body {
   grid-template-columns: 1fr;
   align-items: center;
   background-color: cadetblue;
+  /* overflow: hidden; */
 }
 
 .title {
@@ -30,6 +31,10 @@ h4 {
 }
 
 img {
+  display: block;
+}
+
+picture {
   display: block;
 }
 
