--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,15 @@ h4 {
 
 img {
   display: block;
-
+  object-fit: cover;
+  width: 100%;
 }
-
-
 
 @media (min-width: 960px) {
   .header {
     grid-template-columns: repeat(2, 1fr);
+  }
+  img {
+    aspect-ratio: 4/3;
   }
 }
